<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:id="@+id/second_activity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit"
        android:text="@string/edit"/>
    <TextView
        android:id="@+id/firstName"
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit"/>
    <TextView
        android:id="@+id/lastName"
        android:text="@string/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="500px"
        android:id="@+id/date"
        android:text="@string/edit_date"
        android:layout_below="@+id/lastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>