<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:id="@+id/save"
        android:width="100px"
        android:text="@string/button_save"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="500px"
        android:id="@+id/date"
        android:text="@string/edit_date"
        android:layout_below="@+id/editLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/firstName"
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editFirstName"
        android:layout_alignBottom="@+id/editFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lastName"
        android:text="@string/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editLastName"
        android:layout_alignBottom="@+id/editLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editFirstName"
        android:width="300px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/firstName"
        android:layout_toEndOf="@+id/firstName" />

    <EditText
        android:id="@+id/editLastName"
        android:width="300px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFirstName"
        android:layout_alignLeft="@+id/editFirstName"
        android:layout_alignStart="@+id/editFirstName" />
</RelativeLayout>